about us employee images hidden on mobile + bunch of fixes for mobile

--- a/css/slides.css
+++ b/css/slides.css
@@ -2038,14 +2038,16 @@ button:hover {
   and (min-width: 320px) and (max-width: 480px) and (-webkit-min-device-pixel-ratio: 2) {
     h1{font-size: 33px !important;}
     p {font-size: 20px;}
+    p.hero {font-size: 26px;}
     .small {font-size: 20px !important;}
-    .hero p {font-size: 22px;}
     .common-Button{font-size: 14px;}
     .container .wrap {padding: calc(5.56% + 50px) calc(5% + 0px) !important;}
     .flex-phone {flex-wrap: wrap !important;}
     .contact h1 {margin-top: 20px;}
     .col-6-12 a {margin-bottom: 24px;}
     .col-tablet-1-2 {width: 100% !important;}
+    .img-91 {display: none;}
+    #partners img {margin-bottom: 30px;}
 }
 /* iphone6+ Portrait and Landscape */
 @media only screen
